# django-beam

./: .flake8  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  a.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: tox.yml
.mypy_cache/3.6/: _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.6/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.6/importlib/: __init__.data.json  (+7 more)
docs/: Makefile  api.rst  beam.contrib.rst  conf.py  contributing.rst  example.md  faq.rst  getting_started.rst  index.md  index.rst  license.rst  make.bat  release_notes.rst  usage.rst
src/beam/: __init__.py  actions.py  components.py  dashboard.py  facets.py  inlines.py  layouts.py  registry.py  types.py  urls.py  utils.py  views.py  viewsets.py
tests/: beam  conftest.py  test_actions.py  test_components.py  test_contrib_auth.py  test_contrib_autocomplete.py  test_contrib_reversion.py  test_facets.py  test_inlines.py  test_performance.py  test_registry.py  test_tags.py  test_test.py  test_urls.py  test_utils.py  test_views.py  test_viewsets.py
tests/testapp/: models.py  settings.py  urls.py  views.py
(+110 files in other folders)
