[metadata]
name = django-beam
version = 1.0.0
description = A crud library for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/django-beam/django-beam
download_url = https://github.com/django-beam/django-beam/archive/1.0.0.tar.gz
author = Raphael Kimmig
author_email = raphael@ampad.de
keywords =
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    django >= 2.2
    django-crispy-forms >=1.9
    django-extra-views >=0.12.0
    django-filter >= 2.0

[options.packages.find]
where = src
